# Sales-Forecasting-API

./: Dockerfile  LICENSE  README.md  github.txt  pyproject.toml  requirements.txt  setup.py
app/: main.py
docs/: conf.py
models/forecasting/: forecasting_model.joblib  forecasting_model.pkl  prophet_sales_model.pkl
models/predictive/: le_item.pkl  le_store.pkl  scaler.joblib  scaler.pkl  xgb_predictive_model.pkl
notebooks/: Data preprocessing .ipynb  EDA-DataCleaning.ipynb
notebooks/forecasting/: drishya_chuke-25076922-forecasting-prophet_2.ipynb  drishya_chuke-25076922-forecasting_prophet.ipynb  prophet.ipynb  prophet_2.ipynb
notebooks/predictive/: ADAboost.ipynb  LightGBM.ipynb  RandomForest.ipynb  SGDRegressor.ipynb  XGBoost.ipynb  baseline.ipynb  drishya-chuke-25076922-predictive_baseline.ipynb
