[tool.poetry]
name = "adv-mla-at2"
version = "0.0.0"
description = "Init package for AT2"
authors = ["Drishya Chuke <drishyachuke98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"
xgboost = "^2.1.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
prophet = "^1.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
